After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771843 - nle: Fix nleurisource to actually work again
nle: Fix nleurisource to actually work again
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
unspecified
Other All
: Normal normal
: 1.8.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-22 15:30 UTC by Sebastian Dröge (slomo)
Modified: 2016-09-30 10:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
nleurisource: Always provide a srcpad (3.55 KB, patch)
2016-09-22 15:30 UTC, Sebastian Dröge (slomo)
committed Details | Review
nlecomposition: Don't try to seek on an empty stack (1.02 KB, patch)
2016-09-22 15:31 UTC, Sebastian Dröge (slomo)
committed Details | Review

Description Sebastian Dröge (slomo) 2016-09-22 15:30:56 UTC
See attached patches, this has to be fixed properly in nlesource at some point
though, as explained in the commit message.
Comment 1 Sebastian Dröge (slomo) 2016-09-22 15:30:59 UTC
Created attachment 336091 [details] [review]
nleurisource: Always provide a srcpad

By putting uridecodebin into a bin with a ghostpad. Without this,
nlesource tries to get a srcpad too early (before uridecodebin added
one) and everything fails miserably.

This has to be fixed properly in nlesource at some point, by properly
handling dynamically added pads. Currently they can only work if they
are added in states <= READY, which is not the usual case.
Comment 2 Sebastian Dröge (slomo) 2016-09-22 15:31:04 UTC
Created attachment 336092 [details] [review]
nlecomposition: Don't try to seek on an empty stack

We would seek on a NULL pad then, which gives ugly assertions.
Comment 3 Thibault Saunier 2016-09-22 15:41:46 UTC
Review of attachment 336092 [details] [review]:

Could you enhance the debug message to explain why that happens (ie. no children in the composition ready to be used, because duration=0 or because we are missing a commit or... there is no child).

I wonder if that would deserve an error on the bus?
Comment 4 Thibault Saunier 2016-09-22 15:42:41 UTC
Review of attachment 336091 [details] [review]:

OK, let's do that for now.
Comment 5 Sebastian Dröge (slomo) 2016-09-22 15:50:51 UTC
Attachment 336091 [details] pushed as 7aa69d0 - nleurisource: Always provide a srcpad
Attachment 336092 [details] pushed as a1b923c - nlecomposition: Don't try to seek on an empty stack